# agent-base-system

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  helmfile.yaml.gotmpl  pyproject.toml  skills-lock.json
base_agent_system/: __init__.py
docs/deployment/: neo4j.md
docs/plans/: 2026-04-06-base-ai-agent-system.md  2026-04-06-live-graphiti-runtime-memory.md  2026-04-07-extensibility-first-roadmap.md  2026-04-07-kind-k3s-helmfile-deployment.md  2026-04-07-langgraph-react-chat-agent.md  2026-04-08-interact-endpoint-unification.md  2026-04-08-interaction-threads-ui.md  2026-04-08-openai-direct-react-agent-migration.md  2026-04-09-async-interaction-tree-deep-agent-research.md  2026-04-09-firecrawl-integration.md  2026-04-10-kubernetes-opik-wiring.md  2026-04-10-opik-integration.md  2026-04-15-firecrawl-cloud-opik-cloud.md
docs/runbooks/: k3s-bootstrap.md  kind-bootstrap.md  kubernetes-deployment.md  local-development.md  troubleshooting.md
docs/seed/: README.md  example.md
infra/compose/: docker-compose.yml  neo4j.env  postgres.env
scripts/: bootstrap-kind.sh  container-smoke.sh  deploy-kind.sh  preflight-k3s.sh
src/base_agent_system/: __init__.py  app_state.py  checkpointing.py  config.py  container.py  dependencies.py  logging.py  runtime_services.py
tests/contract/: test_artifact_storage.py  test_chat_ui_api.py  test_chat_ui_assets.py  test_chat_ui_streaming.py  test_evaluation_metrics.py  test_firecrawl_client.py  test_firecrawl_tools.py  (+11 more)
web/: .env.local.example  next.config.ts  package-lock.json  package.json
(+117 files in other folders)
